lib_LIBRARIES = libmt32emu.a
libmt32emu_a_SOURCES = file.cpp i386.cpp part.cpp partial.cpp partialManager.cpp synth.cpp tables.cpp freeverb/allpass.cpp freeverb/comb.cpp freeverb/revmodel.cpp
nobase_pkginclude_HEADERS = file.h i386.h mt32emu.h part.h partial.h partialManager.h structures.h synth.h tables.h freeverb/allpass.h freeverb/comb.h freeverb/denormals.h freeverb/tuning.h freeverb/revmodel.h
