lib_LIBRARIES = libmt32emu.a
libmt32emu_a_SOURCES = file.cpp i386.cpp part.cpp partial.cpp partialManager.cpp poly.cpp synth.cpp tables.cpp tva.cpp tvp.cpp freeverb/allpass.cpp freeverb/comb.cpp freeverb/revmodel.cpp blit/Blit.cpp blit/BlitSaw.cpp blit/BlitSquare.cpp blit/Generator.cpp blit/Stk.cpp
nobase_pkginclude_HEADERS = file.h i386.h mt32emu.h part.h partial.h partialManager.h poly.h structures.h synth.h tables.h tva.h tvp.h freeverb/allpass.h freeverb/comb.h freeverb/denormals.h freeverb/tuning.h freeverb/revmodel.h blit/BlitSaw.h blit/BlitSquare.h blit/Generator.h blit/Stk.h
